[package]
name = "_19_dependenciely_typed"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies]
error-chain = "0.12.0"
futures-await = "0.1.1"
lazy_static = "1.2.0"
rayon = "1.0.3"
serde = "1.0.84"
serde_derive = "1.0.84"
tokio = "0.1.14"
tokio-codec = "0.1.1"
tokio-fs = "0.1.5"
tokio-io = "0.1.11"
tokio-threadpool = "0.1.10"
